# web-analytics-service

./: .gitignore  README.md  analytics.db  generate-events.py  index.html  main.py  models.py  pyproject.toml  requirements.txt
app/: crud.py  database.py  main.py  models.py  schemas.py
backend/: analytics.db  database.py
frontend/: index.html  service-worker.js
scripts/: generate_events.py
